--- a/style.css
+++ b/style.css
@@ -2,15 +2,106 @@ body{
     background-color: #243434;
     margin:0px;
     padding:0px;
+    color: rgb(219, 199, 199);
+    /*font-family: Arial, Helvetica, sans-serif;
+    font-size:12px;
+    font-weight:normal;*/
+    font: normal 14px Arial, Helvetica, sans-serif;
+
+    line-height:1.4em;
 }
-ul{
+
+.container{
+    width:60%;
+    margin:auto;
+}
+
+.box-1{
+    background-color:#555;
+    color:#fff;
+    border: 3px red solid;
+    padding: 5px;
+    margin:20px 0;
+}
+
+.box-1 h1{
+    font-family:Tahoma;
+    font-weight:800;
+    text-decoration: underline;
+    color:rgb(93, 142, 182)
+}
+
+.box-2{
+    background-color:rgb(41, 73, 99);
+    margin:20px 0;
+    padding:20px;
+    border:1px dotted #fff;
+    text-align:center;
+    text-transform:uppercase;
+}
+
+.box-3{
+    background-color:rgb(128, 121, 121)
+
+}
+.item-1{
+    border:1px #ccc solid;
+    padding:10px;
+    border-radius:15px;
+}
+
+.item-1 h2{
+    text-align:center;
+
+}
+.item-1 ul{
+    padding:0;
+    padding-left:20px;
+    list-style:square;
     list-style:none;
 }
-a{
-    text-decoration:none;
+.item-1 li{
+    padding-bottom:6px;
+    border-bottom:dotted 1px rgb(243, 236, 236);
 }
-section{
-    width: 100%;
-    height: 95vh;
-    background-image:url("")
+
+.item-2{
+    border:1px #ccc solid;
+    padding:10px;
+    border-radius:15px;
 }
+
+.item-2 h2{
+    text-align:center;
+
+}
+.item-2 ul{
+    padding:0;
+    padding-left:20px;
+    list-style:square;
+    list-style:none;
+}
+.item-2 li{
+    padding-bottom:6px;
+    border-bottom:dotted 1px rgb(243, 236, 236);
+}
+
+.my-form{
+    padding:20px;
+}
+.my-form .form-group{
+    padding-bottom:10px;
+}
+.my-form label{
+    display:block;
+}
+.my-form input[type="text"], .my-form textarea{
+    padding:5px;
+    width:100%;
+}
+.button{
+    padding:20px;
+    padding-top:2px;
+}
+
+
